--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <span>You can reach out to us!</span>
           <ul>
             <li>Our mail: mail@mail.com</li>
-            <li>Our phone number: 0043586534422</li>
+            <li>Our phone number: 0043586534422 / +233242119972</li>
             <li>Our address: Streetname 22, 84503 City, Country</li>
           </ul>
       </section>
